# Personal-Linux-Fork-of-ProjectWAR

./: .ai-rules  .cursorrules  .env  .gitignore  1_4_8_RESTORATION_PLAN.md  AGENTS.md  BOT_SYSTEM.md  Directory.Build.props  Directory.Build.targets  FUTURE_IMPROVEMENTS.md  NuGet.config  OPTIMIZATIONS.md  ProjectWAR.sln  README.md  SYSTEMIC_DIVERGENCES.md  Sync-Airules.ps1  WarEmulator.sln  build_errors.txt  build_errors_2.txt  build_errors_3.txt  build_log.txt  change_log_codex_spark.md  change_log_gemini.md  check_crash.ps1  check_datafile.ps1  check_patch.ps1  codebase_map.md  common_errors.txt  generate_abilities_sql.py  generate_ability_logic_sql.py  generate_ability_values_sql.py  generate_ability_visuals_sql.py  generate_creature_items_sql.py  generate_creature_protos_sql.py  generate_creature_spawns_sql.py  generate_item_stats_sql.py  generate_itemset_sql.py  generate_zone_respawns_sql.py  knowledge_base.md  launch_client.ps1  (+4 more)
.claude/: settings.local.json
.githooks/: pre-push
AI_Documentation/: .ai-rules  .cursorrules  2026-03-06_work_summary.md  AI_README.md  ability_purchase_fix_plan.md  change_log_gemini.md  (+1 more)
WarZone/: CMakeLists.txt  Intersections.h  LinuxPort.h  Platform.h  Source.cpp  Stopwatch.h  Util.cpp  Util.h  WarZone.vcxproj  ZoneManager.h
WarZone/WarZone/: Util.h  WarZone.vcxproj
WarZone/x64/Debug/: WarZone.dll.recipe  WarZone.ilk  vc143.idb
WarZone/x64/Debug/WarZone.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  WarZone.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
(+895 files in other folders)
